ncpl-mysql-deployment.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: ncpl-mysql
  namespace: ncpl
  labels:
    app: ncpl-mysql
spec:
  selector:
    matchLabels:
      app: ncpl-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ncpl-mysql
    spec:
      containers:
      - image: mysql:5.7
        name: ncpl-mysql
        ports:
        - containerPort: 3306
          name: ncpl-mysql
        volumeMounts:
        - name: ncpl-persistent-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: ncpl-persistent-volume
        persistentVolumeClaim:
          claimName: ncpl-pv-claim
