ncpl-phpmyadmin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myadmin
  namespace: ncpl
  labels:
    name: myadmin
spec:
  containers:
    - name: phpmyadmin
      image: phpmyadmin/phpmyadmin
      ports:
        - containerPort: 80
          name: myadmin
