ncpl-mysql-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ncpl-mysql-svc
  namespace: ncpl
  labels: 
    app: ncpl-mysql-svc
spec:
  type: ClusterIP
  ports:
   -  port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: ncpl-mysql
